tests/type-check/good/import-refined-data.arr
include file("./provide-data.arr")

d1.method-name()
d2(5).another-method-name()

