tests/type-check/bad/import-refined-data1.arr
include file("./provide-data.arr")

d1.only-defined-on-d2()

